# cammy

./: CMakeLists.txt  CMakePresets.json  LICENSE  main.cpp
apps/: CMakeLists.txt
apps/src/: starter.cc
cmake/: CompilerWarnings.cmake  Conan.cmake  conan_profile.txt.in  raspi_toolchain.cmake  someUtils.cmake
